# vinted_ai_stylist

./: README.md  pyproject.toml
src/vinted_ai_stylist/: __main__.py
src/vinted_ai_stylist/core/: app.py
src/vinted_ai_stylist/models/: types.py
src/vinted_ai_stylist/services/: filter_service.py  llm_service.py  vinted_scraper.py
tests/: test_vinted_filter.py
